
bc.. 
try {
    //code to protect
} catch (IllegalStateException e) {
	if (new IllegalStateExceptionQuery(e).isAConnectionLostException()) {
	    // Generally catch silently the exception
	} else {
	    throw e;
	}
}

h4. Changes in  @org.eclipse.sirius.ui@

* <span class="label label-success">Added</span> A new method, @preClose()@ has been added in @org.eclipse.sirius.ui.business.api.dialect.DialectEditor@. This method is called in sync when the editor is asking to be closed (the real closure is done in async). This allows to dispose actions, for example, as soon as the closure is requested. There is a default implementation, that does nothing, for all dialect editors.

h4. Changes in  @org.eclipse.sirius.tests.junit.support@

* <span class="label label-success">Added</span> New methods have been added to @org.eclipse.sirius.tests.support.api.TestsUtil@ to check the current Java runtime version. The parameter is the expected version of Java, i.e: ...7, 8, 9, ..., 13, 14, ...
** @isJavaVersion(int)@
** @isJavaVersionOrOlder(int)@
** @isJavaVersionOrNewer(int)@
* <span class="label label-success">Added</span> The method @org.eclipse.sirius.tests.support.api.SiriusTestCase.waitSaveSessionJob()@ has been added to ensure that the SaveSessionJob, potentially triggered by @org.eclipse.sirius.ui.business.internal.session.SaveSessionWhenNoDialectEditorsListener.statusChangedInternal(Collection<ResourceStatusChange>)@ is finished before continue. It can be call, for example, after changing the list of selected viewpoints, without any editor opened.

h2(#sirius6.3.2). Changes in Sirius 6.3.2

h3. User-Visible Changes
